--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     </head>
 
     <body>
-        <h1>Hello World!</h1>
+        <div>
+            <ul class="nav-bar">
+                <li class="nav-item">
+                    <a href="past.html">Past</a>
+                </li>
+                <li class="nav-item">
+                    <a href="present.html">Present</a>
+                </li>
+                <li class="nav-item">
+                    <a href="future.html">Future</a>
+                </li>
+            </ul>
+        </div>
     </body>
 
 </html>
