adding home page link

--- a/future.html
+++ b/future.html
@@ -1,4 +1,7 @@
 <div>
+    <div>
+        <a href="index.html">Home</a>
+    </div>
     <ul class="nav-bar">
         <li class="nav-item">
             <a href="past.html">Past</a>
