--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <div>
+            <div>
+                <a href="index.html">Home</a>
+            </div>
             <ul class="nav-bar">
                 <li class="nav-item">
                     <a href="past.html">Past</a>
