cleaning up other html files

--- a/future.html
+++ b/future.html
@@ -1,18 +1,29 @@
-<div>
-    <div>
-        <a href="index.html">Home</a>
-    </div>
-    <ul class="nav-bar">
-        <li class="nav-item">
-            <a href="past.html">Past</a>
-        </li>
-        <li class="nav-item">
-            <a href="present.html">Present</a>
-        </li>
-        <li class="nav-item">
-            <a href="future.html">Future</a>
-        </li>
-    </ul>
-</div>
+<!DOCTYPE html>
 
-<h1>Future</h1>
+    <head>
+        <title>Court Noyes</title>
+        <link rel="stylesheet" href="main.css"/>
+    </head>
+
+    <body>
+        <div>
+            <div>
+                <a href="index.html">Home</a>
+            </div>
+            <ul class="nav-bar">
+                <li class="nav-item">
+                    <a href="past.html">Past</a>
+                </li>
+                <li class="nav-item">
+                    <a href="present.html">Present</a>
+                </li>
+                <li class="nav-item">
+                    <a href="future.html">Future</a>
+                </li>
+            </ul>
+        </div>
+
+        <h1>Future</h1>
+    
+    </body>
+</html>
