styling nav on home page

--- a/future.html
+++ b/future.html
@@ -7,9 +7,9 @@
 
     <body>
         <div>
-            <div>
+            <span>
                 <a href="index.html">Home</a>
-            </div>
+            </span>
             <ul class="nav-bar">
                 <li class="nav-item">
                     <a href="past.html">Past</a>
