--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
     </head>
 
     <body>
-        <div>
-            <div>
+        <div class="nav-bar">
+            <span class="home-logo">
                 <a href="index.html">Home</a>
+            </span>
+            <div class="nav-container">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a href="past.html">Past</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="present.html">Present</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="future.html">Future</a>
+                    </li>
+                </ul>
             </div>
-            <ul class="nav-bar">
-                <li class="nav-item">
-                    <a href="past.html">Past</a>
-                </li>
-                <li class="nav-item">
-                    <a href="present.html">Present</a>
-                </li>
-                <li class="nav-item">
-                    <a href="future.html">Future</a>
-                </li>
-            </ul>
         </div>
 
         <h1>Home</h1>
