--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
     <head>
+        <!-- Adding title -->
         <title>Court Noyes</title>
+        <!-- Adding CSS stylesheet -->
         <link rel="stylesheet" href="main.css"/>
     </head>
 
