adding content to homepage

--- a/index.html
+++ b/index.html
@@ -27,7 +27,28 @@
             </div>
         </div>
 
-        <h1>Home</h1>
+        <div class="content">
+            <h1>Hey beautiful people!</h1>
+            <p>Welcome to my personal website. My name is Court, and I'm so glad you're here!</p>
+
+            <h2>Where I've Been</h2>
+            <p>If you want to learn more about what brought me to this point in time, click 
+                <a href="past.html">here</a>
+                .
+            </p>
+
+            <h2>Where I Am Now</h2>
+            <p>For those who are curious about what I'm up to these days, click 
+                <a href="present.html">here</a>
+                .
+            </p>
+
+            <h2>Where I'm Going</h2>
+            <p>Want to learn where I'm hoping to go from here? Click 
+                <a href="future.html">here</a>
+                .
+            </p>
+        </div>
 
     </body>
 
