--- a/past.html
+++ b/past.html
@@ -25,7 +25,21 @@
             </div>
         </div>
 
-        <h1>Past</h1>
+        <div class="content">
+            <h1>Wondering Where I Came From?</h1>
+
+            <h2>My Roots</h2>
+            <p>I grew up in Virginia, pretty close to D.C., where I lived with my mom, dad, two sisters and our dog.</p>
+            <p>When I was in my late 20s, I moved out of my parents' house - for real this time! - to Denver, CO, and spent 6 or 7 years out there playing in the mountains.</p>
+
+            <h2>Hobbies and Travel</h2>
+            <p>In Colorado, I spent a lot of my free time hiking and snowboarding -- my favorite mountain out there is A Basin. (Don't have a favorite here yet but I'm open to suggestions!) </p>
+            <p>I also practiced various types of yoga at different studios around town, and taught myself how to cook at 30 years old.
+                And by taught myself, I mean that I invited my friends who could cook over to my place and watched what they did and participated as much as they would let me.</p>
+
+            <h2>Service and Learning</h2>
+
+        </div>
     
     </body>
 </html>
