adding the rest of the content for past page

--- a/past.html
+++ b/past.html
@@ -32,12 +32,18 @@
             <p>I grew up in Virginia, pretty close to D.C., where I lived with my mom, dad, two sisters and our dog.</p>
             <p>When I was in my late 20s, I moved out of my parents' house - for real this time! - to Denver, CO, and spent 6 or 7 years out there playing in the mountains.</p>
 
-            <h2>Hobbies and Travel</h2>
+            <h2>Hobbies and Interests</h2>
+            <p>As a high schooler, I read so many fantasy books, including Harry Potter and Lord of the Rings, and I started a scary movie club with my friends.</p>
+            <p>When I lived near D.C., I used to travel internationally as much as I could. I lived in Qatar for almost a year, and New Zealand for a couple of months.</p>
             <p>In Colorado, I spent a lot of my free time hiking and snowboarding -- my favorite mountain out there is A Basin. (Don't have a favorite here yet but I'm open to suggestions!) </p>
             <p>I also practiced various types of yoga at different studios around town, and taught myself how to cook at 30 years old.
                 And by taught myself, I mean that I invited my friends who could cook over to my place and watched what they did and participated as much as they would let me.</p>
 
-            <h2>Service and Learning</h2>
+            <h2>Career</h2>
+            <p>I attended the University of Virginia for undergrad, where I studied English literature, and then for grad school, where I studied Instructional Technology in the Education school.
+                I started out my career journey wanting to be an international teacher, and quickly realized that I didn't want to live that far away from my family all the time.</p>
+            <p>So I pivoted and started dabbling in computer stuff, first as a data analyst and then as a web developer via General Assembly bootcamp.</p>
+            <p>I worked as a software engineer for companies ranging from Fortune 500 clients to series A startups. It was a blast!</p>
 
         </div>
     
