--- a/present.html
+++ b/present.html
@@ -25,7 +25,27 @@
             </div>
         </div>
 
-        <h1>Present</h1>
+        <div class="content">
+            <h1>Wondering About What I Do In My Free Time Now?</h1>
+
+            <h2>My Chosen Family</h2>
+            <p>I currently live with my husband, Clayton, and our two cats, Denny and LaLa, in the New North End of Burlington, Vermont.</p>
+
+            <h2>Current Hobbies and Interests</h2>
+            <p>I'm spending a lot of my free time working on gardening and yard projects at our house. I'm growing native flowers,
+                and just started my first veggie garden. I'm also taking a 6-month long gardening intensive at Ethan Allen Homestead.
+                When the weather is bad, I snuggle with my cats and work on indoor crafts, like embroidery, collage card making, and refinishing furniture.
+            </p>
+            <p>On the weekends, I love going backpacking with my friends and have visited several parts of the Long Trail. Hoping to make it to the Adirondacks and maybe the White Mountains soon!
+                This year, I've also gotten into lifting weights at the gym and am loving the challenge of it.</p>
+            <p>I spend most of my traveling time visiting family now. We drive down to Virginia and Tennessee pretty often, so I spend a good amount of time on I-81. If you know of any cool places to stop along the way, please let me know!</p>
+
+            <h2>Career Now</h2>
+            <p>I have a couple of career experiments currently running. One of them is teaching CS1080 at UVM.
+                I also started a website design business where I build websites for small and women-owned businesses. I'm currently participating in a business bootcamp that's helping me learn how to start my business and set everything up.
+                I'm also working for a landscaping company as a gardener one day a week, which is great cause it gets me off my computer for a while!
+            </p>
+        </div>
     
     </body>
 </html>
