--- a/present.html
+++ b/present.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="content">
-            <h1>Wondering About What I Do In My Free Time Now?</h1>
+            <h1>Wondering About What I Do These Days?</h1>
 
             <h2>My Chosen Family</h2>
             <p>I currently live with my husband, Clayton, and our two cats, Denny and LaLa, in the New North End of Burlington, Vermont.</p>
