--- a/future.html
+++ b/future.html
@@ -32,8 +32,15 @@
             <p>My husband and I are hoping to have a couple of kids someday, and maybe also get a dog. Or a mini goat. I'm hoping we live in the New North End for a long, long time.</p>
 
             <h2>Upcoming Hobbies and Curiosities</h2>
-            <p>I would love to get into bikepacking eventually. I love backpacking and think it's a really healthy form of exercise, but there is something kind of cool about how far you can get on a bike in a day. You could really see a lot that way. I think I'd like to keep weightlifting cause it's so fun, and it would also be great to find a yoga studio around here to practice more of that again. I really miss it!</p>
-            <p>Refinishing furniture is so fun AND it would be amazing to be able to build more stuff from scratch. I have so many ideas. So I can see me getting into carpentry or woodworking someday. I also think the gardening passion is going to continue and perhaps bleed over into bird watching. I love listening to them in our yard in the mornings when I'm drinking my tea. I would love to keep crafting and get back into filmmaking, perhaps starting with something short and kinda simple, like music videos. I used to make them for fun in high school and it would be great to pick that back up.</p>
+            <h3>Bikepacking</h3>
+            <p>I would love to get into bikepacking eventually. I love backpacking and think it's a really healthy form of exercise, but there is something kind of cool about how far you can get on a bike in a day. You could really see a lot that way.</p>
+            <h3>Carpentry</h3>
+            <p>Refinishing furniture is so fun AND it would be amazing to be able to build more stuff from scratch. I have so many ideas. So I can see me getting into carpentry or woodworking someday.</p>
+            <h3>Bird Watching</h3>
+            <p>I also think the gardening passion is going to continue and perhaps bleed over into bird watching. I love listening to them in our yard in the mornings when I'm drinking my tea.</p>
+            <h3>Filmmaking</h3>
+            <p>I would love to get back into filmmaking, perhaps starting with something short and kinda simple, like music videos. I used to make them for fun in high school and it would be great to pick that back up.</p>
+            <h3>Travel</h3>
             <p>I honestly don't have many travel goals left at this point, but I would really love to see Montreal. It's right there and I still haven't been!</p>
 
             <h2>Future Career Goals</h2>
