--- a/past.html
+++ b/past.html
@@ -29,20 +29,28 @@
             <h1>Wondering Where I Came From?</h1>
 
             <h2>My Roots</h2>
-            <p>I grew up in Virginia, pretty close to D.C., where I lived with my mom, dad, two sisters and our dog.</p>
-            <p>When I was in my late 20s, I moved out of my parents' house - for real this time! - to Denver, CO, and spent 6 or 7 years out there playing in the mountains.</p>
+            <h3>Family of Origin</h3>
+            <p>I grew up with my mom, dad, two younger sisters and our family dog.</p>
+            <h3>Location</h3>
+            <p>I grew up in Virginia, pretty close to D.C. When I was in my late 20s, I moved out of my parents' house - for real this time! - to Denver, CO, and spent 6 or 7 years out there playing in the mountains.</p>
 
             <h2>Former Hobbies and Interests</h2>
+            <h3>Fantasy and Horror</h3>
             <p>As a high schooler, I read so many fantasy books, including Harry Potter and Lord of the Rings, and I started a scary movie club with my friends.</p>
+            <h3>Travel</h3>
             <p>When I lived near D.C., I used to travel internationally as much as I could. I lived in Qatar for almost a year, and New Zealand for a couple of months.</p>
+            <h3>Outdoor Activities</h3>
             <p>In Colorado, I spent a lot of my free time hiking and snowboarding -- my favorite mountain out there is A Basin. (Don't have a favorite here yet but I'm open to suggestions!) </p>
+            <h3>Indoor Activities</h3>
             <p>I also practiced various types of yoga at different studios around town, and taught myself how to cook at 30 years old.
                 And by taught myself, I mean that I invited my friends who could cook over to my place and watched what they did and participated as much as they would let me.</p>
 
             <h2>Previous Career</h2>
+            <h3>Teaching</h3>
             <p>I attended the University of Virginia for undergrad, where I studied English literature, and then for grad school, where I studied Instructional Technology in the Education school.
                 I started out my career journey as an international teacher, and quickly realized that I didn't want to live that far away from my family all the time.
                 I also taught middle school technology for a year in Denver Public Schools, and quickly realized that I didn't want to be a K-12 teacher in the U.S.</p>
+            <h3>Software Engineering</h3>
             <p>So I pivoted and started dabbling in computer stuff, first as a data analyst and then as a web developer via General Assembly bootcamp.
                 I worked as a software engineer for companies ranging from Fortune 500 clients to series A startups. It was a blast!</p>
 
