--- a/index.html
+++ b/index.html
@@ -31,18 +31,21 @@
             <h1>Hey beautiful people!</h1>
             <p>Welcome to my personal website. My name is Court, and I'm so glad you're here!</p>
 
+            <img src="images/past.jpg" id="past-image"/>
             <h2>Where I've Been</h2>
             <p>If you want to learn more about what brought me to this point in time, click 
                 <a href="past.html">here</a>
                 .
             </p>
 
+            <img src="images/present.jpg" id="present-image"/>
             <h2>Where I Am Now</h2>
             <p>For those who are curious about what I'm up to these days, click 
                 <a href="present.html">here</a>
                 .
             </p>
-
+            
+            <img src="images/future.jpg" id="future-image"/>
             <h2>Where I'm Going</h2>
             <p>Want to learn where I'm hoping to go from here? Click 
                 <a href="future.html">here</a>
